update foto suzuki conveyor tire

--- a/project.html
+++ b/project.html
@@ -276,10 +276,10 @@
             <div class="col-lg-3 col-md-3 portfolio-item isotope-item filter-conveyor">
               <div class="portfolio-card">
                 <div class="portfolio-image">
-                  <img src="assets/img/portfolio/FCC - Assy Radius Conveyor.png" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/SUZUKI - Conveyor Tire.png" class="img-fluid" alt="" loading="lazy">
                   <div class="portfolio-overlay">
                     <div class="portfolio-actions">
-                      <a href="assets/img/portfolio/FCC - Assy Radius Conveyor.png" class="glightbox preview-link"
+                      <a href="assets/img/portfolio/SUZUKI - Conveyor Tire.png" class="glightbox preview-link"
                         data-gallery="portfolio-gallery-graphics"><i class="bi bi-eye"></i></a>
                       <!-- <a href="portfolio-details.html" class="details-link"><i class="bi bi-arrow-right"></i></a> -->
                     </div>
