revisi nama project FCC, dll

--- a/project.html
+++ b/project.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="portfolio-content">
                   <span class="category">Fabrication And Contruction</span>
-                  <h3>Rak Roller</h3>
+                  <h3>Rak Conveyor Part</h3>
                   <p>FCC</p>
                 </div>
               </div>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="portfolio-content">
                   <span class="category">Fabrication And Contruction</span>
-                  <h3>Dolly Stainless</h3>
+                  <h3>Dolly Part Stainless</h3>
                   <p>FCC</p>
                 </div>
               </div>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="portfolio-content">
                   <span class="category">Fabrication And Contruction</span>
-                  <h3>Rak</h3>
+                  <h3>Production Table Rack</h3>
                   <p>FCC</p>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                 <div class="portfolio-content">
                   <span class="category">Conveyor System</span>
                   <h3>Conveyor Tire</h3>
-                  <p>SUZUKI - GIIC Cikarang Plant</p>
+                  <p>SUZUKI - GIIC CIKARANG PLANT</p>
                 </div>
               </div>
             </div>
@@ -991,7 +991,7 @@
                 <div class="portfolio-content">
                   <span class="category">Conveyor System</span>
                   <h3>Seat Storage</h3>
-                  <p>FUJI SEAT INDONESIA</p>
+                  <p>FUJI SEAT INDONESIA - KIIC PLANT</p>
                 </div>
               </div>
             </div>
@@ -1267,7 +1267,7 @@
                 <div class="portfolio-content">
                   <span class="category">Fabrication And Contruction</span>
                   <h3>Skid Rak New</h3>
-                  <p>FUJI SEAT INDONESIA</p>
+                  <p>FUJI SEAT INDONESIA - SURYACIPTA PLANT 1</p>
                 </div>
               </div>
             </div>
@@ -1330,8 +1330,8 @@
                 </div>
                 <div class="portfolio-content">
                   <span class="category">Fabrication And Contruction</span>
-                  <h3>Seat Pallet Junbiki</h3>
-                  <p>FUJI SEAT INDONESIA</p>
+                  <h3>SKID RAK</h3>
+                  <p>FUJI SEAT INDONESIA - KIIC PLANT</p>
                 </div>
               </div>
             </div>
@@ -1937,7 +1937,7 @@
 
   <footer id="footer" class="footer light-background">
 
-     <div class="container footer-top">
+    <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-3 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
@@ -1951,7 +1951,7 @@
           </div>
         </div>
 
-       <div class="col-lg-2 col-md-3 footer-links">
+        <div class="col-lg-2 col-md-3 footer-links">
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
@@ -1966,7 +1966,7 @@
         </div>
       </div>
 
-     
+
 
     </div>
 
