--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <style>
   .map-responsive {
     overflow: hidden;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio (height / width * 100) */
+    padding-bottom: 56.25%;
+    /* 16:9 aspect ratio (height / width * 100) */
     position: relative;
     height: 0;
-}
+  }
 
-.map-responsive iframe {
+  .map-responsive iframe {
     left: 0;
     top: 0;
     height: 100%;
     width: 100%;
     position: absolute;
-}
+  }
 </style>
 
 
@@ -417,6 +418,69 @@
           </div>
         </div>
 
+        <!-- form email sendiri -->
+        <!-- <div class="row">
+          <div class="col-lg-12">
+            <div class="form-wrapper" data-aos="fade-up" data-aos-delay="400">
+              <form action="send-email.php" method="post" role="form" class="php-email-form">
+                <div class="row">
+                  <div class="col-md-6 form-group">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-person"></i></span>
+                      <input type="text" name="name" class="form-control" placeholder="Your name*" required="">
+                    </div>
+                  </div>
+                  <div class="col-md-6 form-group">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                      <input type="email" class="form-control" name="email" placeholder="Email address*" required="">
+                    </div>
+                  </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-6 form-group">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-phone"></i></span>
+                      <input type="text" class="form-control" name="phone" placeholder="Phone number*" required="">
+                    </div>
+                  </div>
+                  <div class="col-md-6 form-group">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-list"></i></span>
+                      <select name="subject" class="form-control" required="">
+                        <option value="">Select service*</option>
+                        <option value="Service 1">Fabrication</option>
+                        <option value="Service 2">Installation</option>
+                        <option value="Service 3">Electrical</option>
+                        <option value="Service 4">Machine</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="form-group mt-3">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-chat-dots"></i></span>
+                      <textarea class="form-control" name="message" rows="6" placeholder="Write a message*"
+                        required=""></textarea>
+                    </div>
+                  </div>
+                  <div class="my-3">
+                    <div class="loading">Loading</div>
+                    <div class="error-message"></div>
+                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                  </div>
+                  <div class="text-center">
+                    <button type="submit">Submit Message</button>
+                  </div>
+
+                </div>
+              </form>
+            </div>
+          </div>
+
+        </div> -->
+        <!-- form email sendiri -->
+
+        <!-- form email bawaan -->
         <!-- <div class="row">
           <div class="col-lg-12">
             <div class="form-wrapper" data-aos="fade-up" data-aos-delay="400">
@@ -476,6 +540,7 @@
           </div>
 
         </div> -->
+        <!-- email -->
 
       </div>
     </section><!-- /Contact Section -->
@@ -498,7 +563,7 @@
           </div>
         </div>
 
-       <div class="col-lg-2 col-md-3 footer-links">
+        <div class="col-lg-2 col-md-3 footer-links">
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
@@ -513,12 +578,12 @@
         </div>
       </div>
 
-     
+
 
     </div>
 
     <!--  -->
-    
+
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">
           <script>document.write(/\d{4}/.exec(Date())[0])</script>
